Fix gradients for collapsed focused toots
The focus background color applies on top of the main default color, so
`rgba($ui-highlight-color, 0.05)`
is equivalent to
`mix($ui-highlight-color, darken($ui-base-color, 8%), 5%)`
where darken(...) is the value of `--background-color` as CSS vars can't be used in SASS functions.

The rgba value of focused toots cannot be used in the gradient as it would make the gradient bottom transparent and mess up the color.

The collapsed gradient needed to be moved into the focusable class as it otherwise doesn't apply.

The background color for PMs and focused toots are the same. PMs don't have a focus color.

--- a/app/javascript/flavours/polyam/styles/components/status.scss
+++ b/app/javascript/flavours/polyam/styles/components/status.scss
@@ -113,6 +113,14 @@
   &:focus {
     outline: 0;
     background: rgba($ui-highlight-color, 0.05);
+
+    // Polyam: Moved from .status &.collapsed to here as otherwise doesn't apply
+    &.collapsed .status__content::after {
+      background: linear-gradient(
+        rgba(mix($ui-highlight-color, darken($ui-base-color, 8%), 5%), 0),
+        rgba(mix($ui-highlight-color, darken($ui-base-color, 8%), 5%), 1)
+      );
+    }
   }
 }
 
@@ -288,17 +296,10 @@
       }
     }
 
-    &:focus > .status__content::after {
-      background: linear-gradient(
-        rgba(lighten($ui-base-color, 4%), 0),
-        rgba(lighten($ui-base-color, 4%), 1)
-      );
-    }
-
     &.status-direct > .status__content::after {
       background: linear-gradient(
-        rgba(mix($ui-base-color, $ui-highlight-color, 95%), 0),
-        rgba(mix($ui-base-color, $ui-highlight-color, 95%), 1)
+        rgba(mix($ui-highlight-color, darken($ui-base-color, 8%), 5%), 0),
+        rgba(mix($ui-highlight-color, darken($ui-base-color, 8%), 5%), 1)
       );
     }
   }
